# claudie

./: .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.md  build.rs
.github/workflows/: release.yml
assets/: claudie.manifest
packaging/: README.md
packaging/unix/: install-user.sh  uninstall-user.sh
packaging/windows/: build-installer.ps1  claudie.iss
src/: config.rs  globals.rs  i18n.rs  main.rs  notifier.rs  official_usage.rs  proxy.rs  proxy_optimizer.rs  time_util.rs  usage_display.rs  util.rs  version_check.rs
src/app/: fishing.rs  mod.rs  pomodoro.rs  stats.rs
src/hooks/: claude_settings.rs  events.rs  mod.rs  quota.rs  server.rs
src/proxy/: capability_cache.rs  http.rs  mod.rs  provider.rs  request_conv.rs  response_conv.rs  streaming.rs  tool_history.rs  upstream.rs
src/proxy_optimizer/: cache.rs  compress.rs  config.rs  mod.rs  summary.rs  tests.rs
src/settings/: mod.rs  secrets.rs  storage.rs
src/ui/: clipboard.rs  folder_dialog.rs  gif_animation.rs  mod.rs  prompt_popup.rs  slint_views.rs  theme.rs  window_icon.rs  window_position.rs
src/ui/settings_panel/: controller.rs  controls.rs  mod.rs  paint.rs
src/ui/settings_panel/controller/: basic.rs  pomodoro.rs  profiles.rs  stats.rs
src/ui/window/: mod.rs  render.rs
