[package]
name = "claudie"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "symbols"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "1.16.1", default-features = false, features = ["backend-winit", "compat-1-2", "renderer-software", "std", "unstable-winit-030"] }
ureq = "2.12"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
