[package]
name = "claudie"
version = "0.1.2"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "symbols"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "1.16.1", default-features = false, features = ["backend-winit", "compat-1-2", "renderer-software", "software-renderer-path", "std", "unstable-fontique-08", "unstable-winit-030"] }
# Same Unicode line-break algorithm Slint's text layout uses, so the prompt
# popup's code-row height estimate breaks lines where Slint actually does.
unicode-linebreak = "0.1.5"
ureq = "2.12"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
